# Minecraft-Client-Base

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
client/: Client.java  build.bat
injector/: inject.cpp
loader/: dllmain.cpp
loader/include/: class_loader.h  jni_natives.h  main_natives.h  mapper.h  utils.h
loader/src/: class_loader.cpp  jni_natives.cpp  main_natives.cpp  mapper.cpp  utils.cpp
mappings/: download.py  fields.csv  methods.csv  params.csv
